--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,8 +2,8 @@
 runOnSave = true
 
 [theme]
-primaryColor = "#2e8b57"
-backgroundColor = "#f4f4f4"
-secondaryBackgroundColor = "#d0e0d8"
-textColor = "#2f3e46"
-font = "serif"
+primaryColor = "#b37a4c"              # Warm coffee brown
+backgroundColor = "#faf7f2"           # Cream white
+secondaryBackgroundColor = "#e8dfd3"  # Sand beige
+textColor = "#3d2c24"                 # Espresso brown
+font = "sans serif"
